<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/exit2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="586dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="586dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="100dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exit2Button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/avgTextView"
        android:layout_width="95dp"
        android:layout_height="92dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="341dp"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/exit2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="139dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="341dp"
        app:layout_constraintBottom_toTopOf="@+id/viewDetailsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avgTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rain" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="32dp"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="269dp"
        android:text="@string/textview2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/exit2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgTextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="207dp"
        android:text="@string/textview3"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/exit2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="205dp"
        android:text="@string/textview4"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/viewDetailsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="282dp"
        android:layout_marginBottom="144dp"
        android:text="@string/textview5"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/exit2Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="53dp"
        android:layout_height="43dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="138dp"
        android:text="@string/textview6"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/viewDetailsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>